compatiable with laravel 11

--- a/composer.json
+++ b/composer.json
@@ -18,9 +18,9 @@
         }
     ],
     "require": {
-        "illuminate/support": "^9.0 || ^10.0",
+        "illuminate/support": "^9.0 || ^10.0 || ^11.0",
         "league/flysystem": "^3.12",
-        "maennchen/zipstream-php": "^2.4",
+        "maennchen/zipstream-php": "^2.4 || ^3.1",
         "ctf0/package-changelog": "*"
     },
     "autoload": {
